force-app/main/default/objects/CampaignMember/fields/Source_of_Post_Secondary_Ed_Information__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Post_Secondary_Ed_Information__c</fullName>
    <inlineHelpText>Source of Post Secondary Education Information.</inlineHelpText>
    <label>Source of Post Secondary Education Info</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Official college transcript</fullName>
            </value>
            <value>
                <fullName>Institutional data other than transcript</fullName>
            </value>
            <value>
                <fullName>Self-reported by participant</fullName>
            </value>
            <value>
                <fullName>Other third-party verification</fullName>
            </value>
            <value>
                <fullName>n/a (still in HS)</fullName>
            </value>
            <value>
                <fullName>n/a (not enrolled in postsec)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>