force-app/main/default/objects/CampaignMember/fields/Target_School_ID_AFEIP__c.field-meta.xml
<CustomField>
    <fullName>Target_School_ID_AFEIP__c</fullName>
    <inlineHelpText>Upward Bound APR Field #55 - School Code for Postsecondary Institution First Attended</inlineHelpText>
    <label>Postsec School Code First Attended</label>
    <length>100</length>
    <type>Text</type>
</CustomField>