force-app/main/default/objects/CampaignMember/fields/Targeted_School__c.field-meta.xml
<CustomField>
    <fullName>Targeted_School__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Targeted School</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Targeted_School__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Targeted_School__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>