force-app/main/default/objects/CampaignMember/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <formula>Contact.LastName &amp; Contact.FirstName &amp; Contact.BirthDate_Text__c &amp; Campaign.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique ID</label>
    <type>Text</type>
</CustomField>