force-app/main/default/objects/CampaignMember/fields/Work_Study_Position__c.field-meta.xml
<CustomField>
    <fullName>Work_Study_Position__c</fullName>
    <inlineHelpText>Work Study Position, for reporting year.</inlineHelpText>
    <label>Work Study Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>n/a (not offered)</fullName>
            </value>
            <value>
                <fullName>n/a (prior participant)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>