force-app/main/default/objects/CampaignMember/recordTypes/CPS_EOC.recordType-meta.xml
<RecordType>
    <fullName>CPS_EOC</fullName>
    <active>true</active>
    <label>CPS - EOC</label>
</RecordType>