force-app/main/default/objects/CampaignMember/recordTypes/CPS_Group_Event.recordType-meta.xml
<RecordType>
    <fullName>CPS_Group_Event</fullName>
    <active>true</active>
    <label>CPS Group Event</label>
</RecordType>