force-app/main/default/objects/CampaignMember/recordTypes/CPS_TS.recordType-meta.xml
<RecordType>
    <fullName>CPS_TS</fullName>
    <active>true</active>
    <label>CPS - TS</label>
</RecordType>