force-app/main/default/objects/CampaignMember/recordTypes/CPS_UB.recordType-meta.xml
<RecordType>
    <fullName>CPS_UB</fullName>
    <active>true</active>
    <label>CPS - UB</label>
</RecordType>